Finished the Bank Documentation
